--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <style>
+        body {
+            background-image: url();
+        }
         #banner{
             height: 360px;
             width: 100%;
@@ -18,7 +21,7 @@
 <body>
     <div class="container">
         <h1 class="text-center mt-2 mb-4">Friends Series</h1>
-        <img class="img-fluid" id="banner" src="http://127.0.0.1:5500/static/central_perk_main.jpg">
+        <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/central_perk_main.jpg">
         <h2 class="text-center mt-2 mb-3">About Friends</h2>
         <p>Friends is a 90's Comedy TV show, based in Manhattan, about 6 friends who go through just about every life experience imaginable together; love, marriage, divorce, children, heartbreaks, fights, new jobs and job losses and all sorts of drama.</p>
 
