--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 <body class="dropdown" data-bs-theme="light">
     {% include 'nav.html' %}
     <div class="container bg-dark-subtle border border-dark-subtle ">
-        <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/central_perk_main.jpg">
+        <img class="img-fluid" id="banner" src="static/central_perk_main.jpg">
         <h1 class="text-center mt-2 mb-4 ">Friends Series</h1>
         <p>Friends is a 90's Comedy TV show, based in Manhattan, about 6 friends who go through just about every life experience imaginable together; love, marriage, divorce, children, heartbreaks, fights, new jobs and job losses and all sorts of drama.</p>
 
